add all department maps, replace nicaragua by custom map

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -10,140 +10,11 @@
 <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
 <script src="https://code.highcharts.com/maps/modules/drilldown.js"></script>
 <script src="https://code.highcharts.com/mapdata/countries/ni/ni-all.js"></script>
+<script type="text/javascript" src="{% static 'maps/ni-custom-all.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/map-ni-drilldown.js' %}"></script>
 
-<script type="text/javascript">
-/*
-TODO:
-- Check data labels after drilling. Label rank? New positions?
-- Not US Mainland text
-- Separators
-*/
-$(function() {
-var data = Highcharts.geojson(Highcharts.maps['countries/ni/ni-all']),
-    // Some responsiveness
-    small = $('#nic-map-container').width() < 400;
-
-// Set drilldown pointers
-$.each(data, function(i) {
-    this.drilldown = this.properties['hc-key'];
-    this.value = i; // Non-random bogus data
-});
-
-// Instanciate the map
-Highcharts.mapChart('nic-map-container', {
-    chart: {
-        backgroundColor: "#01c083",
-        events: {
-            drilldown: function(e){
-                if (!e.seriesOptions){
-                    var chart = this;
-                    mapkey = '/static/maps/' + e.point.drilldown + "-all";
-                    $.get(mapkey + '.json', function(data) {
-
-                        $.each(data, function (i) {
-                            this.value = i;
-                        });
-
-                        chart.showLoading('<i class="fa fa-refresh fa-spin fa-3x fa-fw"></i><span class="sr-only">Loading...</span>');
-
-                        setTimeout(function () {
-                            chart.hideLoading();
-                            chart.addSeriesAsDrilldown(e.point, {
-                                name: e.point.name,
-                                data: data.data,
-                                dataLabels: {
-                                    enabled: true,
-                                    format: '{point.name}'
-                                },
-                                allowPointSelect: true,
-                                states: {
-                                    hover: {
-                                        color: '#a4edba'
-                                    }
-                                }
-                            });
-                        }, 1000);
-
-                    });
-                }
-
-
-                this.setTitle(null, {
-                    text: e.point.name
-                });
-            },
-            drillup: function() {
-                this.setTitle(null, {
-                    text: 'NI'
-                });
-            }
-        }
-    },
-
-    title: {
-        text: ''
-    },
-
-    subtitle: {
-        text: 'Nicaragua',
-        floating: true,
-        align: 'right',
-        y: 50,
-        style: {
-            fontSize: '16px'
-        }
-    },
-
-    legend: small ? {} : {
-        layout: 'vertical',
-        align: 'right',
-        verticalAlign: 'middle'
-    },
-    mapNavigation: {
-        enabled: true,
-        buttonOptions: {
-            verticalAlign: 'bottom'
-        }
-    },
-
-    plotOptions: {
-        map: {
-            states: {
-                hover: {
-                    color: '#ffffff'
-                }
-            }
-        }
-    },
-
-    series: [{
-        data: data,
-        name: 'Ni',
-        dataLabels: {
-            enabled: true,
-            format: '{point.properties.postal-code}'
-        }
-    }],
-
-    drilldown: {
-        activeDataLabelStyle: {
-            color: '#FFFFFF',
-            textDecoration: 'none',
-            textOutline: '1px #000000'
-        },
-        drillUpButton: {
-            relativeTo: 'spacingBox',
-            position: {
-                x: 0,
-                y: 60
-            }
-        }
-    }
-});
-})
-</script>
 <style>
-#container {
+#nic-map-container {
     height: 300px; 
     min-width: 310px; 
     max-width: 800px; 
