--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -1,99 +1,5 @@
-<!DOCTYPE html>
-{% load staticfiles %}
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Presupuestos Municipales Abiertos</title>
-
-    <!-- CSS de Bootstrap -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/bootstrap-theme.css' %}">
-    <link rel="stylesheet" href="{% static 'css/pma.css' %}">
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-
-    <!-- librerías opcionales que activan el soporte de HTML5 para IE8 -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-</head>
-
-<body>
-    <!-- Header -->
-    <nav class="navbar navbar-fixed-top" role="navigation">
-        <!-- El logotipo y el icono que despliega el menú se agrupan
-       para mostrarlos mejor en los dispositivos móviles -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                <span class="sr-only">Desplegar navegación</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">
-                <span id="brand-01">PRESUPUESTOS</span>
-                <span id="brand-02">MUNICIPALES </span>
-                <span id="brand-03">ABIERTOS </span>
-            </a>
-        </div>
-
-        <!-- Agrupar los enlaces de navegación, los formularios y cualquier
-       otro elemento que se pueda ocultar al minimizar la barra -->
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-            <ul class="nav navbar-nav navbar-right pma-navbar">
-                <li><a href="#">INICIO</a>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-         EL OBSERVATORIO <b class="caret"></b>
-        </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Acción #1</a>
-                        </li>
-                        <li><a href="#">Acción #2</a>
-                        </li>
-                        <li><a href="#">Acción #3</a>
-                        </li>
-                        <li class="divider"></li>
-                        <li><a href="#">Acción #4</a>
-                        </li>
-                        <li class="divider"></li>
-                        <li><a href="#">Acción #5</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-         PRESUPUESTO <b class="caret"></b>
-        </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Acción #1</a>
-                        </li>
-                        <li><a href="#">Acción #2</a>
-                        </li>
-                        <li><a href="#">Acción #3</a>
-                        </li>
-                        <li class="divider"></li>
-                        <li><a href="#">Acción #4</a>
-                        </li>
-                        <li class="divider"></li>
-                        <li><a href="#">Acción #5</a>
-                        </li>
-                    </ul>
-                </li>
-                <li><a href="#">CONSULTA</a>
-                </li>
-                <li class="active"><a href="#">DESCARGA</a>
-                </li>
-                <li><a href="#"><span class="glyphicon glyphicon-search"></span></a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
+{% extends "_base.html" %}
+{% block content %}
     <div class="jumbotron pma-gradient pma-hero">
         <div class="container">
             <div class="row">
@@ -102,9 +8,9 @@
                     <h4 class="text-center"> Informémonos dónde y cuándo será</h4>
                 </div>
                 <div class="col-md-5">
+                    <div id="nic-map-container"></div>
                 </div>
             </div>
-
         </div>
     </div>
         <div class="container pma-illustration">
@@ -183,6 +89,7 @@
             </div>
         </div>
     </div>
+{% endblock %}
 
     <footer class="footer">
         <div class="container">
