--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -1,126 +1,120 @@
 {% extends "_base.html" %}
 {% block content %}
-    <div class="jumbotron pma-gradient pma-hero">
-        <div class="container">
+<div class="jumbotron pma-gradient pma-hero">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-7">
+                <h3 class="text-center"> <strong>Participemos</strong> en la consulta del <br> Presupuesto Municipal</h3>
+                <h4 class="text-center"> Informémonos dónde y cuándo será</h4>
+            </div>
+            <div class="col-md-5">
+                <div id="nic-map-container"></div>
+            </div>
+        </div>
+    </div>
+</div>
+    <div class="container pma-illustration">
+        <div class="illustration-index">
+            <img src="static/images/illustration-index.png" alt="..." class="">
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
             <div class="row">
-                <div class="col-md-7">
-                    <h3 class="text-center"> <strong>Participemos</strong> en la consulta del <br> Presupuesto Municipal</h3>
-                    <h4 class="text-center"> Informémonos dónde y cuándo será</h4>
+                <div class="col-md-12">
+                    <h3> <strong>Sobre</strong> este sitio.</h3>
+                    <hr>
                 </div>
-                <div class="col-md-5">
-                    <div id="nic-map-container"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-8">
+                    <small> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit</small>
+                </div>
+                <div class="col-md-4">
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <a href="#">Leer más...</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="row">
+                <div class="col-md-12">
+                    <img class="img-responsive" src="static/images/illustration-all-icons.png" alt="Sobre este sitio">
                 </div>
             </div>
         </div>
     </div>
-        <div class="container pma-illustration">
-            <div class="illustration-index">
-                <img src="static/images/illustration-index.png" alt="..." class="">
-            </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 gray-box">
+            <h2>Origen</h2>
+            <h3>de los Ingresos</h3>
+            <ul>
+                <li>Lorem ipsum dolor sit amet torquent.</li>
+                <li>Lorem sapien metus adipiscing purus sed.</li>
+                <li>Facilisi aliquam justo consequat senectus nunc gravida eleifend tellus lacus sit viverra.</li>
+                <li>Morbi sagittis sed metus illum nisl purus vivamus mauris tempor scelerisque feugiat fusce tempor porttitor et scelerisque feugiat justo justo facilisi porttitor dolor amet vestibulum curae ante elementum et id.</li>
+                <li>Porta volutpat amet sed sem non.</li>
+                <li>Torquent quis dapibus scelerisque nullam vel pellentesque adipiscing augue sequi elit donec turpis wisi faucibus porta ullamcorper integer nulla congue vehicula lobortis ipsum eu diam pellentesque at orci blandit praesent ipsum quisque nec amet lobortis
+                    duis.</li>
+                <li>Nulla nulla leo laoreet pulvinar ut.</li>
+                <li>Nullam lorem mollis turpis vivamus sit ligula vestibulum adipiscing duis rhoncus a vestibulum risus phasellus purus in vestibulum.</li>
+                <li>Rutrum etiam velit amet wisi ipsum.</li>
+                <li>Neque ante etiam semper purus dapibus.</li>
+                <li>Ipsum mus nulla odio est auctor habitasse ipsum wisi nullam imperdiet elit ultrices curae condimentum orci et commodo.</li>
+                <li>Ligula egestas elementum magna viverra lacus curabitur sed tincidunt enim sodales risus eleifend etiam eget primis unde in.</li>
+                <li>Sit suscipit scelerisque risus et nisl.</li>
+                <li>Maecenas a tempus ad mi mi.</li>
+            </ul>
         </div>
-
+        <div class="col-md-6 gray-box">
+            <h2>Destino</h2>
+            <h3>de los Gastos</h3>
+        </div>
+    </div>
+</div>
+<div class="pma-gradient pma-summary">
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-8">
                 <div class="row">
                     <div class="col-md-12">
-                        <h3> <strong>Sobre</strong> este sitio.</h3>
+                        <h3> <strong>Consolidado</strong> de la Inversión Municipal 2017.</h3>
                         <hr>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-8">
-                        <small> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit</small>
-                    </div>
-                    <div class="col-md-4">
-
-                    </div>
-                </div>
-                <div class="row">
                     <div class="col-md-12">
-                        <a href="#">Leer más...</a>
+                        <h4> <strong>Rubros de la Inversión</strong></h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore
+                            magna aliqua. Ut enim ad minim veniam, quis nostrud
+                            exercitation
+                        </p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div class="row">
                     <div class="col-md-12">
-                        <img class="img-responsive" src="static/images/illustration-all-icons.png" alt="Sobre este sitio">
+                        <h3> <strong>Distribución</strong><br> por Categorías de Ley.</h3>
+                        <hr>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <img src="images/espacio%20grafico.jpg" alt="..." class="img-rounded">
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    </div>
-    <div class="pma-gradient pma-summary">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <h3> <strong>Consolidado</strong> de la Inversión Municipal 2017.</h3>
-                            <hr>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <h4> <strong>Rubros de la Inversión</strong></h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                                sed do eiusmod tempor incididunt ut labore et dolore
-                                magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                exercitation
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <h3> <strong>Distribución</strong><br> por Categorías de Ley.</h3>
-                            <hr>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <img src="images/espacio%20grafico.jpg" alt="..." class="img-rounded">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+</div>
 {% endblock %}
-
-    <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <h3> <strong>PRESUPUESTOS <br> MUNICIPALES <br> ABIERTOS</strong></h3>
-                    <small> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation </small>
-                    <a href="#"><strong>POLÍTICAS DE PRIVACIDAD</strong></a>
-                </div>
-                <div class="col-md-6">
-                    <h3> <strong>Nuestros</strong> Aliados.</h3>
-                    <hr>
-                    <img class="img-responsive" src="images/usaid.png" alt="USAID">
-                    <img class="img-responsive" src="images/guegue.png" alt="GUEGUE">
-                    <img class="img-responsive" src="images/global.png" alt="GLOBAL">
-                </div>
-            </div>
-            <div class="row">
-                <p>2017 Todos los derechos reservados</p>
-            </div>
-        </div>
-
-    </footer>
-
-    <!-- Librería jQuery requerida por los plugins de JavaScript -->
-    <script src="http://code.jquery.com/jquery.js"></script>
-
-    <!-- Todos los plugins JavaScript de Bootstrap (también puedes
-         incluir archivos JavaScript individuales de los únicos
-         plugins que utilices) -->
-    <script src="js/bootstrap.min.js"></script>
-</body>
-
-</html>
