--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-7">
-                <h3 class="text-center"> <strong>Participemos</strong> en la consulta del <br> Presupuesto Municipal</h3>
+                <h2 class="text-center"> <strong>Participemos</strong> en la consulta del <br> Presupuesto Municipal</h2>
                 <h4 class="text-center"> Informémonos dónde y cuándo será</h4>
             </div>
             <div class="col-md-5">
@@ -16,7 +16,7 @@
 {% endblock %}
 {% block content %}
 <div class="container pma-illustration">
-    <div class="illustration-index">
+    <div class="illustration-index col-md-7">
         <img src="static/images/illustration-index.png" alt="..." class="img-responsive center-block">
     </div>
 </div>
