--- a/core/static/css/pma.css
+++ b/core/static/css/pma.css
@@ -1,7 +1,6 @@
-// http://type-scale.com/?size=14&scale=1.200&text=A%20Visual%20Type%20Scale&webfont=Relaway&font-family=%27Raleway%27%2C%20sans-serif%3B&font-weight=400&font-family-headers=%27Raleway%27%2C%20sans-serif%3B&font-weight-headers=inherit&background-color=white&font-color=%23333
 html {
     font-size: 0.875em;
-}i
+}
 body {
     background-color: white;
     font-family: 'Raleway', sans-serif;
@@ -36,6 +35,7 @@ h3 {
 h4 {
     font-size: 1.2em;
 }
+
 small,
 .font_small {
     font-size: 0.833em;
@@ -45,6 +45,10 @@ small,
 }
 .jumbotron.pma-hero {
     background-color: transparent;
+    color: #ffffff;
+}
+.pma-hero h2 {
+    margin: 0 0.5em 0 0.5em;
 }
 .pma-illustration {
     position: relative;
@@ -54,17 +58,19 @@ small,
     top: -386px;
 }
 .pma-navbar.navbar-nav {
-    padding-top: 20px;
+    padding-top: 20px   ;
 }
 .pma-navbar.navbar-nav > li > a {
     color: #fff;
     font-weight: bold;
     text-transform: uppercase;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: bold;
     -webkit-border-radius: 25px;
     -moz-border-radius: 25px;
     border-radius: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 .pma-navbar.navbar-nav > li > a:hover {
     background-color: #008bb4;
