--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -26,12 +26,15 @@
             <div class="row">
                 <div class="col-md-12">
                     <h3> <strong>Sobre</strong> este sitio.</h3>
-                    <hr>
+                    <hr class="pma-line-3">
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-8">
-                    <small> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit</small>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing
+                    elit</p>
                 </div>
                 <div class="col-md-4">
 
@@ -53,10 +56,11 @@
     </div>
 </div>
 <div class="container">
-    <div class="row">
-        <div class="col-md-6 gray-box">
-            <h2>Origen</h2>
-            <h3>de los Ingresos</h3>
+    <div class="row pma-spacing-top pma-spacing-bottom">
+        <div class="col-md-6">
+        <div class="gray-box">
+            <h2>Origen<br/>de los Ingresos</h2>
+            <hr class="pma-line-2">
             <ul>
                 <li>Lorem ipsum dolor sit amet torquent.</li>
                 <li>Lorem sapien metus adipiscing purus sed.</li>
@@ -75,9 +79,12 @@
                 <li>Maecenas a tempus ad mi mi.</li>
             </ul>
         </div>
-        <div class="col-md-6 gray-box">
-            <h2>Destino</h2>
-            <h3>de los Gastos</h3>
+        </div>
+        <div class="col-md-6">
+        <div class="gray-box">
+            <h2>Destino<br/>de los Gastos</h3>
+            <hr class="pma-line-2">
+        </div>
         </div>
     </div>
 </div>
@@ -87,13 +94,13 @@
             <div class="col-md-8">
                 <div class="row">
                     <div class="col-md-12">
-                        <h3> <strong>Consolidado</strong> de la Inversión Municipal 2017.</h3>
-                        <hr>
+                        <h2> <strong>Consolidado</strong> <br/>de la Inversión Municipal 2017.</h2>
+                        <hr class="pma-line-1">
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <h4> <strong>Rubros de la Inversión</strong></h4>
+                        <h3> <strong>Rubros de la Inversión</strong></h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                             sed do eiusmod tempor incididunt ut labore et dolore
                             magna aliqua. Ut enim ad minim veniam, quis nostrud
@@ -105,8 +112,8 @@
             <div class="col-md-4">
                 <div class="row">
                     <div class="col-md-12">
-                        <h3> <strong>Distribución</strong><br> por Categorías de Ley.</h3>
-                        <hr>
+                        <h2> <strong>Distribución</strong><br> por Categorías de Ley.</h2>
+                        <hr class="pma-line-1">
                     </div>
                 </div>
                 <div class="row">
