--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -107,16 +107,20 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h3> <strong>PRESUPUESTOS <br> MUNICIPALES <br> ABIERTOS</strong></h3>
-                    <small> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation </small>
+                    <a class="footer-brand" href="{% url 'home' %}">
+                        <span id="brand-01">Presupuestos</span>
+                        <span id="brand-02">Municipales </span>
+                        <span id="brand-03">Abiertos </span>
+                    </a>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation </p>
                     <a href="#"><strong>POLÍTICAS DE PRIVACIDAD</strong></a>
                 </div>
                 <div class="col-md-6">
                     <h3> <strong>Nuestros</strong> Aliados.</h3>
-                    <hr>
-                    <img class="img-responsive" src="/static/images/logo_usaid.png" alt="USAID">
-                    <img class="img-responsive" src="/static/images/logo_guegue.png" alt="GUEGUE">
-                    <img class="img-responsive" src="/static/images/logo_global_communities.png" alt="GLOBAL">
+                    <hr class="pma-line-2">
+                    <img class="pma-thumbnail" src="/static/images/logo_usaid.png" alt="USAID">
+                    <img class="pma-thumbnail" src="/static/images/logo_guegue.png" alt="GUEGUE">
+                    <img class="pma-thumbnail" src="/static/images/logo_global_communities.png" alt="GLOBAL">
                 </div>
             </div>
             <div class="row">
