--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -113,18 +113,28 @@
                         <span id="brand-03">Abiertos </span>
                     </a>
                     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation </p>
-                    <a href="#"><strong>POLÍTICAS DE PRIVACIDAD</strong></a>
+                    <a href="#" class="pma-special-link font_small">POLÍTICAS DE PRIVACIDAD</a>
                 </div>
                 <div class="col-md-6">
                     <h3> <strong>Nuestros</strong> Aliados.</h3>
                     <hr class="pma-line-2">
-                    <img class="pma-thumbnail" src="/static/images/logo_usaid.png" alt="USAID">
-                    <img class="pma-thumbnail" src="/static/images/logo_guegue.png" alt="GUEGUE">
-                    <img class="pma-thumbnail" src="/static/images/logo_global_communities.png" alt="GLOBAL">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <img class="img-responsive" src="/static/images/logo_usaid.png" alt="USAID">
+                        </div>
+                        <div class="col-md-4">
+                            <img class="img-responsive" src="/static/images/logo_guegue.png" alt="GUEGUE">
+                        </div>
+                        <div class="col-md-4">
+                            <img class="img-responsive" src="/static/images/logo_global_communities.png" alt="GLOBAL">
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="row">
-                <p>2017 Todos los derechos reservados</p>
+                <div class="col-md-12 copyright">
+                <small>2017 Todos los derechos reservados</small>
+                </div>
             </div>
         </div>
 
