--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -106,6 +106,26 @@
                             magna aliqua. Ut enim ad minim veniam, quis nostrud
                             exercitation
                         </p>
+                        <p>&nbsp;</p>
+                    </div>
+                    <div class="col-md-2">
+                        <img src="/static/images/icons/heart.png" alt="Salud" class="img-responsive center-block">
+                        <h4 class="text-center"><strong>Salud</strong></h4>
+                    </div>
+                    <div class="col-md-2">
+                        <img src="/static/images/icons/book.png" alt="Educación" class="img-responsive center-block">
+                        <h4 class="text-center"><strong>Educación</strong></h4>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="/static/images/icons/network.png" alt="Participación Ciudadana" class="img-responsive center-block">
+                        <h4 class="text-center"><strong>Participación<br/>Ciudadana</strong></h4>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="/static/images/icons/water.png" alt="Agua y Saneamiento" class="img-responsive center-block">
+                        <h4 class="text-center"><strong>Agua y<br/> Saneamiento</strong></h4>
+                    </div>
+                    <div class="col-md-2">
+                        <img src="/static/images/icons/network.png" alt="Participación Ciudadana" class="img-responsive center-block">
                     </div>
                 </div>
             </div>
